add randomly googled JVM opts to project.clj
No proof that they would work.
Just because we programmers like to play with compiler options
and hope that they will give some benefits.